# pyopendds

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  _pyopendds.cpp  build.sh  build_test.sh  itl2py  itl2py.py  mypy.ini  proposed_idl_mapping.rst  pyproject.toml  python3-pyopendds-dev.install  python3-pyopendds-doc.install  python3-pyopendds.install  setup-dev.py  setup.cfg  setup.py  test.py  test.sh
.github/workflows/: build_docs.yml  pyopendds.yml
debian/: changelog  control  copyright  debhelper-build-stamp  files  python3-pyopendds.postinst.debhelper  python3-pyopendds.prerm.debhelper  python3-pyopendds.substvars  rules
debian/.debhelper/python3-pyopendds/: dbgsym-build-ids
debian/.debhelper/python3-pyopendds/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/python3-pyopendds/dbgsym-root/usr/share/doc/: python3-pyopendds-dbgsym
debian/python3-pyopendds/DEBIAN/: control  md5sums  postinst  prerm
debian/python3-pyopendds/usr/lib/python3/dist-packages/_pyopendds/: __init__.py
debian/python3-pyopendds/usr/lib/python3/dist-packages/pyopendds/: DataReader.py  DataWriter.py  DomainParticipant.py  Publisher.py  Subscriber.py  Topic.py  __init__.py  constants.py  exceptions.py  init_opendds.py  util.py
debian/python3-pyopendds/usr/lib/python3/dist-packages/pyopendds-0.2.0.egg-info/: PKG-INFO  entry_points.txt  top_level.txt
debian/python3-pyopendds/usr/lib/python3/dist-packages/pyopendds/dev/: util.py
debian/python3-pyopendds/usr/lib/python3/dist-packages/pyopendds/dev/include/pyopendds/: basictype.hpp  topictype.hpp
debian/python3-pyopendds/usr/lib/python3/dist-packages/pyopendds/dev/itl2py/: CppOutput.py  Output.py  PythonOutput.py  __main__.py  ast.py  generate.py  itl.py
debian/python3-pyopendds/usr/lib/python3/dist-packages/pyopendds/dev/itl2py/templates/: user_cpp.tpl  user_py.tpl
debian/python3-pyopendds/usr/lib/python3/dist-packages/pyopendds/dev/pyidl/: __main__.py  gencmakefile.py
debian/python3-pyopendds/usr/lib/python3/dist-packages/pyopendds/dev/pyidl/templates/: Config.in.tpl  cmakefile.tpl
doc/: future.md  proposed_idl_mapping.rst
docs/: .gitignore  Makefile  conf.py  design.md  getting_started.rst  index.rst  modules.rst  proposed_idl_mapping.rst
pyopendds/: Config.py  DataReader.py  DataReaderListenerImpl.py  DataWriter.py  DomainParticipant.py  IDL.py  Publisher.py  Qos.py  Subscriber.py  Topic.py  __init__.py  constants.py  exceptions.py  init_opendds.py  util.py
pyopendds/dev/: cmake.py  util.py
pyopendds/dev/include/pyopendds/: basictype.hpp  common.h  common.hpp  exception.hpp  topictype.hpp  user.h  user.hpp  utils.hpp
pyopendds/dev/itl2py/: CppOutput.py  Output.py  PythonOutput.py  __init__.py  __main__.py  ast.py  build_files.py  generate.py  itl.py
pyopendds/dev/itl2py/templates/: CMakeLists.tpl  CMakeLists.txt  setup.py  setup_py.tpl  user.cpp  user.py  user_cpp.tpl  user_py.tpl
pyopendds/dev/pyidl/: __main__.py  gencmakefile.py  gensetupfile.py
pyopendds/dev/pyidl/templates/: cmakefile.tpl
pyopendds/ext/: CMakeLists.txt  _pyopendds.cpp
pyopendds_dev/: cmake.py
pyopendds_dev/itl2py/: __init__.py  build_files.py
rpmbuild/: pyopendds.spec
rpmbuild/SPECS/: python3-opendds.spec
scripts/: itl2py
test/: CMakeLists.txt  Reading.idl  build.sh  publisher.cpp  test.py
tests/: run_tests.py
tests/basic_test/: .gitignore  CMakeLists.txt  DataReaderListenerImpl.cpp  DataReaderListenerImpl.h  airbusdds.idl  basic.idl  publisher.cpp  publisher.py  rtps.ini  run_test.py  run_test.sh  subscriber.cpp  subscriber.py
tests/itl2py_test/: CMakeLists.txt  IdlTest.idl  another_file.idl  itl2py_test.idl
tests/typeSupport_test/: TypeSupport_test.idl  TypeSupport_to_include.idl  main.py  run_test.sh
tests/unit_tests/: test_opendds_version.py
