[metadata]
name = pyopendds
version = 0.1.0
author = Fred Hornsey
author-email = hornseyf@objectcomputing.com
home-page = https://github.com/oci-labs/pyopendds
description = Python Bindings for OpenDDS
long-description = file: README.md
long-description-content-type = text/markdown
license = MIT
license-file = LICENSE
keywords = opendds dds
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Communications
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Libraries

[flake8]
max-line-length = 100
ignore =
    E128,
    E131, # Tries to Enforce an Arbitrary Indentation Pattern
    W503,
exclude =
    pyopendds/dev/itl2py/templates/*
    tests/basic_test/build/*
    tests/itl2py_test/build/*
