[metadata]
name = pyopendds
version = 3.20.5
author = David Pierret
author_email = david.pierret@smile.fr
home_page = https://github.com/Sdpierret/pyopendds
description = Python Bindings for OpenDDS
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
keywords = opendds dds
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Communications
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Libraries

[flake8]
max_line_length = 100
ignore =
    E128,
    E131, # Tries to Enforce an Arbitrary Indentation Pattern
    W503,
exclude =
    build,
    pyopendds/dev/itl2py/templates,
    tests/basic_test/build*,
    tests/itl2py_test/build*,
